2004-10-10  Joel Brobecker  <brobecker@gnat.com>

	* mips-tdep.c (mips16_scan_prologue): Renames
	mips16_heuristic_proc_desc. Update comment.
	(mips32_scan_prologue): Renames mips32_heuristic_proc_desc.
	(heuristic_proc_desc): Update calls to the 2 functions above.

2004-10-10  Joel Brobecker  <brobecker@gnat.com>

	* mips-tdep.c (mips_insn16_frame_cache): Remove unused variables.
	Update comments. Also immediately return empty cache when the start
	address of our function could not be found.
	(mips_insn32_frame_cache): Likewise.

2004-10-10  Joel Brobecker  <brobecker@gnat.com>

	* mips-tdep.c (mips16_decode_reg_save): Delete, no longer used.
	(mips_insn16_frame_cache): Pass frame cache in call to
	heuristic_proc_desc. Move some code to mips16_heuristic_proc_desc.
	Remove code that became redundant as a consequence.
	(mips32_heuristic_proc_desc): No longer compute a fake
	procedure descriptor. Compute the full frame cache instead.
	Some minor comment reformatting.

2004-10-10  Jim Blandy  <jimb@redhat.com>

	* MAINTAINERS (generic symtabs, dwarf readers, elf reader, stabs
	reader, tracing bytecode stuff): Remove self.

2004-10-10  Mark Kettenis  <kettenis@gnu.org>

	* sparc64-linux-tdep.c: Update copyright year.  Don't include
	"solib-svr4.h".
	(sparc64_linux_svr4_fetch_link_map_offsets): Remove function.
	(sparc64_linux_init_abi): Don't set solib_svr4_link_map_offsets.
	* Makefile.in (sparc64-linux-tdep.o): Update dependencies.

	* sparc-linux-tdep.c: Update copyright year.
	(sparc_linux_sigtramp_start): Change first argument from CORE_ADDR
	to struct frame_info *.  Use safe_frame_unwind_memory instead of
	deprecated_read_memory_nobpt.
	(sparc32_linux_sigtramp_start, sparc32_linux_rt_sigtramp_start):
	Change argumen from CORE_ADDR to struct frame_info *.  Adjust for
	changed signature of sparc_linux_sigtramp_start.
	(sparc32_linux_pc_in_sigtramp): Remove function.
	(sparc32_linux_sigtramp_p): New function.
	(sparc32_linux_sigtramp_frame_sniffer): Use